--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -191,7 +191,7 @@ jobs:
       - name: Build
         run: |
           rustup target add --toolchain nightly "$TARGET"
-          cargo zigbuild --release --target "$TARGET.$GLIBC_VERSION"
+          cargo +nightly zigbuild --release --target "$TARGET.$GLIBC_VERSION"
       - name: Upload Artifact
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-linux-riscv64"
@@ -225,7 +225,7 @@ jobs:
       - name: Build
         run: |
           rustup target add --toolchain nightly "$TARGET"
-          cargo zigbuild --release --target "$TARGET.$GLIBC_VERSION"
+          cargo +nightly zigbuild --release --target "$TARGET.$GLIBC_VERSION"
       - name: Upload Artifact
         run: |
           source="terracotta-${TERRACOTTA_VERSION}-linux-loongarch64"
