--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,6 @@ chrono = { version = "0.4.41", default-features = false, features = [
 lazy_static = "1.5.0"
 libc = "0.2.174"
 local-ip-address = "0.6.5"
-native-dialog = "0.9.0"
 num-bigint = "0.4.6"
 open = { version = "5.3.2", default-features = false }
 rand_core = { version = "0.9.3", features = ["os_rng"] }
@@ -47,6 +46,13 @@ objc2 = "0.6.1"
 objc2-app-kit = "0.3.1"
 objc2-foundation = "0.3.1"
 objc2-web-kit = "0.3.1"
+native-dialog = "0.9.0"
+
+[target.'cfg(target_os = "android")'.dependencies]
+easytier = { git = "https://github.com/burningtnt/EasyTier.git", branch = "develop"}
+uuid = "1.18.1" # This library are the necessities to interact with EasyTier. DO NOT upgrade their version.
+toml = "0.9.8"
+tokio = "1.48.0"
 
 [build-dependencies]
 winresource = "0.1"
@@ -59,6 +65,13 @@ reqwest = { version = "0.12.22", default-features = false, features = [
 ] }
 zip = "4.3.0"
 toml = "0.9.4"
+
+[lib]
+crate-type = ["cdylib"]
+
+[[bin]]
+name = "terracotta"
+path = "src/main.rs"
 
 [profile.dev]
 panic = "abort"
