--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,7 +50,7 @@ native-dialog = "0.9.0"
 
 [target.'cfg(target_os = "android")'.dependencies]
 easytier = { git = "https://github.com/burningtnt/EasyTier.git", branch = "develop"}
-jni-sys = "0.4.0"
+jni = { version = "0.21.1", features = ["invocation"] }
 # These libraries are the necessities to interact with EasyTier. DO NOT upgrade their version.
 uuid = "1"
 toml = "0"
