--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,6 +55,7 @@ jni = { version = "0.21.1", features = ["invocation"] }
 uuid = "1"
 toml = "0"
 tokio = "1"
+cidr = { version = "0", features = ["serde"] }
 
 [build-dependencies]
 winresource = "0.1"
