--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -174,6 +174,8 @@ jobs:
           cargo +nightly ndk build --release --lib --target "${{ matrix.target }}" \
             -Z build-std=core,std,alloc,proc_macro,panic_abort \
             -Z build-std-features=default,optimize_for_size
+        env:
+          RUSTFLAGS: -Zunstable-options -Cpanic=unwind
       - name: Upload Artifact
         run: |
           if [ "${{ matrix.os }}" = "android" ]; then
