--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ chrono = { version = "0.4.41", default-features = false, features = [
 ] }
 lazy_static = "1.5.0"
 libc = "0.2.174"
-local-ip-address = "0.6.5"
+local-ip-address = { git = "https://github.com/burningtnt/local-ip-address.git", branch = "patch-1"}
 num-bigint = "0.4.6"
 open = { version = "5.3.2", default-features = false }
 rand_core = { version = "0.9.3", features = ["os_rng"] }
